# keepfresh-api

./: .env  .env.example  .gitignore  Cargo.toml  biome.jsonc  package.json  schemas.d.ts  tsconfig.json  wrangler.jsonc
db/: Cargo.toml  indexes.sql  match_food_category.sql  search_products.sql  update_products.sql  upload_products.sql
db/src/: lib.rs  mod.rs
shared_types/: Cargo.toml
shared_types/src/: lib.rs
src/: app.ts  main.rs
src/clients/: anthropic.ts  open-food-facts.ts
src/config/: categories.ts  env.ts
src/data/: holidays.json
src/helpers/: brand.ts  category.ts  expiry.ts  product.ts  quantity.ts  storage-location.ts  toTitleCase.ts  units.ts
src/middleware/: auth.ts
src/routes/: api.ts  category.ts  grocery-items.ts  index.ts  inventory.ts  v1.ts
src/routes/v1/: api.ts  index.ts  routes.ts
src/routes/v2/: api.ts  index.ts  routes.ts
src/schemas/: grocery-item.ts  inventory.ts  kv-category.ts  open-food-facts.ts  product.ts  shopping.ts
src/types/: category.ts  cloudflare.ts  database.ts  hono.ts
src/utils/: date.ts  field-mapper.ts  maths.ts  zod.ts
