[package]
name = "keepfresh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
validator = { version = "0.19.0", features = ["derive"] }
