[package]
name = "keepfresh-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = "0.4.38"
dotenv = "0.15.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4"] }
aws-sdk-dynamodb = "1.54.0"
shared_types = { path = "shared_types" }
db = { path = "db" }
serde_json = "1.0.133"

[workspace]
members = ["db", "shared_types"]
