[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.10"
aws-sdk-dynamodb = "1.54.0"
tracing-subscriber = "0.3.19"
shared_types = { path = "../shared_types" }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
serde = { version = "1.0.215", features = ["derive"] }